--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
 .App {
-  text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .App-header {
-  background-color: #222;
-  height: 50px;
-  padding: 20px;
-  color: white;
-  font-size: 40px;
-  text-align: center;
+    background-color: #222;
+    height: 50px;
+    padding: 10px;
+    color: white;
+    font-size: 22px;
+    text-align: center;
 }
